--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Absorption_Law/dist/
 /Luhn Algorithm Lab 2/dist/
 /Luhn Algorithm Lab 2/build/
+/Luhn Algorithm Lab 1/build/
+/Luhn Algorithm Lab 1/dist/
