--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Luhn Algorithm Lab 2/build/
 /Luhn Algorithm Lab 1/build/
 /Luhn Algorithm Lab 1/dist/
+/Lab Project 1 MasterMind v2/build/
+/Lab Project 1 MasterMind v2/dist/
