--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Luhn Algorithm Lab 1/dist/
 /Lab Project 1 MasterMind v2/build/
 /Lab Project 1 MasterMind v2/dist/
+/Lab Hashing 1/build/
+/Lab Hashing 1/dist/
